# SIMULADORES-SISTEMAS-OPERATIVOS-

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
